test: update SessionSyncExecutorTest to verify session reload on merge